trunk/Archive/86741687c85476be4d16d24010a3fb4d-7063104e283ed82d51a6fde7370c6e59/output
main.cpp:6:17: error: 'WindowManager' has not been declared
     friend void WindowManager::clear(ScreenIndex);
                 ^
main.cpp:6:38: error: 'ScreenIndex' has not been declared
     friend void WindowManager::clear(ScreenIndex);
                                      ^
